nohup.out
On AWS instance
/home/ec2-user/data
Traceback (most recent call last):
  File "get_taggeddocument.py", line 37, in <module>
    liste_unique_user = list(np.unique(merge_order_product["user_id"]))
NameError: name 'np' is not defined
On AWS instance
/home/ec2-user/data
nb unique user : 206209
Traceback (most recent call last):
  File "get_taggeddocument.py", line 42, in <module>
    start_time = time.time()
NameError: name 'time' is not defined
On AWS instance
/home/ec2-user/data
nb unique user : 206209
Traceback (most recent call last):
  File "get_taggeddocument.py", line 43, in <module>
    sentences = [doc2vec.TaggedDocument(words=words_for_user(uid), tags=[uid]) for uid in liste_unique_user]
  File "get_taggeddocument.py", line 43, in <listcomp>
    sentences = [doc2vec.TaggedDocument(words=words_for_user(uid), tags=[uid]) for uid in liste_unique_user]
NameError: name 'doc2vec' is not defined
On AWS instance
/home/ec2-user/data
nb unique user : 206209
--- 9338.200659275055 seconds ---
List saved
python: can't open file 'get_corpus_word2vec.py': [Errno 2] No such file or directory
  File "get_copurs_word2vec.py", line 42
    if train_mode = True :
                  ^
SyntaxError: invalid syntax
  File "get_copurs_word2vec.py", line 38
    def words_for_user(data_prior, uid, train_mode=False, data_train):
                      ^
SyntaxError: non-default argument follows default argument
  File "get_copurs_word2vec.py", line 38
    def words_for_user(data_prior, uid, train_mode=False, data_train):
                      ^
SyntaxError: non-default argument follows default argument
On AWS instance
/home/ec2-user/data
Traceback (most recent call last):
  File "get_copurs_word2vec.py", line 63, in <module>
    sentence_train = [words_for_user(merge_order_product, uid, True, order_products__train) for uid in train_user]
  File "get_copurs_word2vec.py", line 63, in <listcomp>
    sentence_train = [words_for_user(merge_order_product, uid, True, order_products__train) for uid in train_user]
  File "get_copurs_word2vec.py", line 44, in words_for_user
    sequence.append(train_sequence.reset_index()["product_id"].tolist())
  File "/home/ec2-user/anaconda3/lib/python3.5/site-packages/pandas/core/series.py", line 1553, in append
    verify_integrity=verify_integrity)
  File "/home/ec2-user/anaconda3/lib/python3.5/site-packages/pandas/tools/merge.py", line 845, in concat
    copy=copy)
  File "/home/ec2-user/anaconda3/lib/python3.5/site-packages/pandas/tools/merge.py", line 901, in __init__
    raise TypeError("cannot concatenate a non-NDFrame object")
TypeError: cannot concatenate a non-NDFrame object
On AWS instance
/home/ec2-user/data
train end
List saved
--- 3535.036306619644 seconds ---
test prior end
List saved
--- 786.9826476573944 seconds ---
test label end
List saved
--- 93.09391140937805 seconds ---
On AWS instance
/home/ec2-user/data
nb unique user : 206209
--- 9792.964209794998 seconds ---
Traceback (most recent call last):
  File "get_taggeddocument_sequence.py", line 53, in <module>
    pickle.dump(sentences_wth_sequences, fp)
NameError: name 'sentences_wth_sequences' is not defined
On AWS instance
/home/ec2-user/data
Traceback (most recent call last):
  File "get_taggeddocument_sequence.py", line 40, in <module>
    random.shuffle(liste_user)
NameError
 name 'random' is not defined
On AWS instance
/home/ec2-user/data
train end
List saved
--- 4811.86368227005 seconds ---
test prior end
List saved
--- 1647.852108001709 seconds ---
test label end
List saved
--- 197.2714970111847 seconds ---
On AWS instance
/home/ec2-user/data
train end
List saved
--- 4831.127237796783 seconds ---
test prior end
List saved
--- 2528.5516822338104 seconds ---
test label end
List saved
--- 88.61416745185852 seconds ---
On AWS instance
/home/ec2-user/data
train end
List saved
--- 4871.873188734055 seconds ---
test prior end
List saved
--- 1635.3946812152863 seconds ---
test label end
List saved
--- 197.16236853599548 seconds ---
On AWS instance
/home/ec2-user/data
train end
List saved
--- 4878.968823194504 seconds ---
test prior end
List saved
--- 2539.0569739341736 seconds ---
test label end
List saved
--- 87.88784885406494 seconds ---
On AWS instance
/home/ec2-user/data
Traceback (most recent call last):
  File "get_corpus_word2vec_v2.py", line 22, in <module>
    order_products__train = pd.merge(order_products__train, order[["order_id", "user_id"]],how="left", on="order_id")
NameError: name 'order_products__train' is not defined
On AWS instance
/home/ec2-user/data
nb unique user : 203164
--- 5657.167104005814 seconds ---
Corpus saved
--- 260.9253420829773 seconds ---
Label saved
